syntax = "proto3";
package epoch_publisher;

service EpochPublisher {
    rpc SetEpoch (SetEpochRequest) returns (SetEpochResponse);
}

message SetEpochRequest {
    uint64 epoch = 1;
}

message SetEpochResponse {
}
